build/resources/test/Fall_21_Test_Cases/Good/LO-2/lvl2-good-easy-18.lo
// *Good test case*
// Uncalled functions
// Expected: 0
// Points = 3

int main() {
    {return 0;}
}

int foo() {
    {return 10;}
}

int bar() {
    {return 20;}
}