build/resources/test/Fall_21_Test_Cases/Bad/LO-2/lvl2-bad-medium-16.lo
// *Bad testcase*
// Undefined functions: notice "Foo" vs "foo"
// Points = 3

int main()
{
    int a;
    {
       a=5;
       return foo(a);
    }
}

int Foo(int a) {
    {return a;}
}